@@ -76,6 +76,8 @@ ifeq ($(PLATFORM),Solaris)
 else ifeq ($(PLATFORM),Windows)
   FLAG_RELRO          =
   FLAG_STDLIB         =
+  EXE_FLAGS_EXT      += -static-libgcc -static-libstdc++
+  SO_FLAGS_EXT       += -static-libgcc -static-libstdc++
 else ifeq ($(PLATFORM),BSD)
   EXE_FLAGS_EXT      += -L/usr/local/lib
   SO_FLAGS_EXT       += -L/usr/local/lib
@@ -102,15 +104,28 @@ endif
 ifeq ($(TEST),1)
   CFLAGS_EXT         += -DLSP_TESTING
   CXXFLAGS_EXT       += -DLSP_TESTING
+  EXPORT_SYMBOLS     ?= 1
 else
-  ifneq ($(ARTIFACT_EXPORT_ALL),1)
-    CFLAGS_EXT         += -fvisibility=hidden
-    CXXFLAGS_EXT       += -fvisibility=hidden
+  ifeq ($(ARTIFACT_EXPORT_SYMBOLS),1)
+    EXPORT_SYMBOLS     ?= 1
+  else
+    EXPORT_SYMBOLS     ?= 0
   endif
 endif
 
+ifneq ($(EXPORT_SYMBOLS),1)
+  CFLAGS_EXT         += -fvisibility=hidden
+  CXXFLAGS_EXT       += -fvisibility=hidden
+endif
+
+ifneq ($(ARTIFACT_EXPORT_HEADERS),0)
+  INSTALL_HEADERS    ?= 1
+else
+  INSTALL_HEADERS    ?= 0
+endif
+
 # Define flags for (cross) build
-CFLAGS             := \
+CFLAGS             += \
   $(CFLAGS_EXT) \
   -fdata-sections \
   -ffunction-sections \
@@ -120,9 +135,8 @@ CFLAGS             := \
 
 CDEFS              += -DLSP_INSTALL_PREFIX=\\\"$(PREFIX)\\\"
   
-CXXFLAGS           := \
+CXXFLAGS           += \
   $(CXXFLAGS_EXT) \
-  -std=c++98 \
   -fno-exceptions \
   -fno-rtti \
   -fdata-sections \
