@@ -4,6 +4,7 @@
 
 === 1.0.2 ===
 * Updated VST2 headers and definitions.
+* Updated build scripts.
 
 === 1.0.1 ===
 * Updated build scripts.
@@ -15,5 +16,5 @@
 * Updated build system.
 
 === 0.5.0 ===
-
 * Initial version of 3rd party libraries
+
